# prophet_hindsight

./: .env.examples  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
conf/: config.yaml  config_rl.yaml
conf/augment/: default.yaml
conf/data/: default.yaml
conf/filter/: default.yaml
conf/output/: default.yaml
conf/prompts/: default.yaml  event_augment.yaml  reasoning_augment.yaml
conf/rl_selection/: default.yaml
example_scripts/: qwen3-full.yaml  qwen3-top-z.yaml
prophet_eval/: eval.py  eval_models.py  launch_server.py  score.py  server_args.yaml
prophet_hindsight/common/: db.py  forecast.py  judge.py  prompts.py  utils.py
prophet_hindsight/evaluate/: algo.py  bootstrap.py  utils.py
prophet_hindsight/event/: event_augment.py  prompt.py  sampler.py
prophet_hindsight/pipeline/: __init__.py  analyze.py  config.py  run_pipeline.py  run_rl_pipeline.py  runner.py  state.py
prophet_hindsight/pipeline/stages/: __init__.py  base.py  data_loading.py  dataset_creation.py  evaluation.py  event_augment.py  filtering.py  reason_augment.py  rl_dataset_creation.py  rl_selection.py
prophet_hindsight/reasoning/: augment_strategies.py  prompt.py  reason_augment.py  reason_filter.py
prophet_trainer/: accelerator_config.yaml  complete_model.py  create_dataset.py  prompt.py  sft.py  torchtune_train_sft.py
prophet_trainer/config/: accelerator_config.yaml  qwen3-8b-full.yaml
prophet_trainer/evaluate/: evaluate.py  generate.py  generate_vllm.py  submit_eval_to_hf.py
