[project]
name = "prophet-hindsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "instructor==1.11.3",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "json-repair>=0.52.4",
    "openai==1.82.0",
    "pandas>=2.3.3",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "supabase>=2.23.0",
    "torchao>=0.14.1",
    "wandb>=0.22.3",
]

[project.optional-dependencies]
training = [
    "trl",
    "peft",
    "kernels",
    "datasets",
    "transformers",
    "accelerate",
]

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100
# Target Python 3.12+.
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), isort (`I`), and pyupgrade (`UP`) codes by default.
select = ["E", "F", "I", "UP"]
# Ignore line too long errors (E501) as the formatter handles this.
ignore = ["E501"]

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"
# Indent with spaces, rather than tabs.
indent-style = "space"
# Respect magic trailing commas.
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending.
line-ending = "auto"
